--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,8 @@
   <title>Document</title>
 </head>
 <body>
-  <div id="root"></div> 
+  <div id="root">
+  </div> 
 </body>
   <script src="build/bundle.js"></script>     
 </html>
